Update path to cssReset and tailwind stylesheets

--- a/app/src/components/layout.scss
+++ b/app/src/components/layout.scss
@@ -1,4 +1,7 @@
 // CSS RESET
-@import "../cssReset.scss"
+@import "../styles/cssReset.scss";
+
+// Tailwind CSS
+@import "../styles/tailwind";
 
 // Layout Styles
