--- a/app/src/components/header.scss
+++ b/app/src/components/header.scss
@@ -1,4 +1,5 @@
 .navbar {
+  /* Nav link hover animation */
   nav {
     ul li a {
       position: relative;
@@ -22,4 +23,65 @@
       }
     }
   }
+
+  /* Mobile hamburger animation */
+  .hamburger {
+    &.active {
+      div span {
+        &:nth-child(2) {
+          opacity: 0;
+        }
+
+        &:first-child {
+          -webkit-transform: translateY(13px) rotate(45deg);
+          -ms-transform: translateY(13px) rotate(45deg);
+          -o-transform: translateY(13px) rotate(45deg);
+          transform: translateY(13px) rotate(45deg);
+        }
+
+        &:last-child {
+          -webkit-transform: translateY(-13px) rotate(-45deg);
+          -ms-transform: translateY(-13px) rotate(-45deg);
+          -o-transform: translateY(-13px) rotate(-45deg);
+          transform: translateY(-13px) rotate(-45deg);
+        }
+      }
+    }
+  }
+}
+
+/* Mobile nav slide in animation */
+.ReactModal__Overlay {
+  transform: translateY(-100vh);
+  transition: all 500ms ease-in-out;
+  background: rgba(0.1, 0.1, 0.1, 0.3) !important;
+  opacity: 0;
+
+  .close-x {
+    div span {
+      &:first-child {
+        -webkit-transform: translateY(13px) rotate(45deg);
+        -ms-transform: translateY(13px) rotate(45deg);
+        -o-transform: translateY(13px) rotate(45deg);
+        transform: translateY(13px) rotate(45deg);
+      }
+
+      &:last-child {
+        -webkit-transform: translateY(-13px) rotate(-45deg);
+        -ms-transform: translateY(-13px) rotate(-45deg);
+        -o-transform: translateY(-13px) rotate(-45deg);
+        transform: translateY(-13px) rotate(-45deg);
+      }
+    }
+  }
+}
+
+.ReactModal__Overlay--after-open {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  transform: translateY(-100vh);
+  opacity: 0;
 }
